// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapDetailAdressenPand should render everything 1`] = `
<Connect(MapDetailResultWrapper)
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  subTitle="Pand label"
  title="Pand"
>
  <ul
    className="map-detail-result__list"
  >
    <MapDetailResultItem
      hasMultiline={false}
      label="Oorspronkelijk bouwjaar"
      link={false}
      value="2020"
    />
    <MapDetailResultItem
      hasMultiline={false}
      label="Naam"
      link={false}
      value="Gebouw!"
    />
    <MapDetailResultStatusItem
      label="Status"
      status=""
      value=""
    />
  </ul>
</Connect(MapDetailResultWrapper)>
`;

exports[`MapDetailAdressenPand should render unknown for empty year and empty name 1`] = `
<Connect(MapDetailResultWrapper)
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  subTitle="Pand label"
  title="Pand"
>
  <ul
    className="map-detail-result__list"
  >
    <MapDetailResultItem
      hasMultiline={false}
      label="Oorspronkelijk bouwjaar"
      link={false}
      value="onbekend"
    />
    <MapDetailResultItem
      hasMultiline={false}
      label="Naam"
      link={false}
      value=""
    />
    <MapDetailResultStatusItem
      label="Status"
      status=""
      value=""
    />
  </ul>
</Connect(MapDetailResultWrapper)>
`;

exports[`MapDetailAdressenPand should render unknown without year and name 1`] = `
<Connect(MapDetailResultWrapper)
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  subTitle="Pand label"
  title="Pand"
>
  <ul
    className="map-detail-result__list"
  >
    <MapDetailResultItem
      hasMultiline={false}
      label="Oorspronkelijk bouwjaar"
      link={false}
      value="onbekend"
    />
    <MapDetailResultItem
      hasMultiline={false}
      label="Naam"
      link={false}
      value=""
    />
    <MapDetailResultStatusItem
      label="Status"
      status=""
      value=""
    />
  </ul>
</Connect(MapDetailResultWrapper)>
`;
